home page finished

--- a/pages/education.html
+++ b/pages/education.html
@@ -2,9 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edu</title>
+    <link rel="stylesheet" href="/styles/education.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<header>
+    <div class="container">
+        <div class="header__body">
+            <div class="header__user-info">
+                <div class="header__user-avatar">
+                    <img src="/assets/home-user-avatar.png" alt="">
+                </div>
+                <div class="header__user-name">
+                    Yessentay Bakberdi
+                </div>
+            </div>
+            <div class="header__navigation">
+                <nav>
+                    <ul>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="family.html">Family</a></li>
+                        <li><a href="education.html">Education</a></li>
+                        <li><a href="hobbies.html">Hobbies</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+</header>
 </body>
 </html>
