--- a/pages/home.html
+++ b/pages/home.html
@@ -2,9 +2,76 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="/styles/home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="header__body">
+                <div class="header__user-info">
+                    <div class="header__user-avatar">
+                        <img src="/assets/home-user-avatar.png" alt="">
+                    </div>
+                    <div class="header__user-name">
+                        Yessentay Bakberdi  
+                    </div>
+                </div>
+                <div class="header__navigation">
+                    <nav>
+                        <ul>
+                            <li><a href="home.html">Home</a></li>
+                            <li><a href="family.html">Family</a></li>
+                            <li><a href="education.html">Education</a></li>
+                            <li><a href="hobbies.html">Hobbies</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+<section class="intro">
+    <div class="container">
+        <div class="intro__user-body">
+            <div class="intro__left-side">
+                <h1 class="name">Yessentay Bakberdi <br><span class="profession">mobile developer</span></h1>
+            </div>
+            <div class="intro__user-avatar">
+                <img src="/assets/home-user-avatar.png" alt="">
+            </div>
 
+        </div>
+    </div>
+</section>
+<section class="projects">
+    <div class="container">
+        <div class="projects__header">
+            <h1>Projects & Work</h1>
+        </div>
+        <div class="projects__body">
+            <div class="project">
+                <h1>Working as a Intern <b>Flutter Developer</b> in a <b><span class="blue-text">Vector Edu</span></b> </h1>
+            </div>
+            <div class="project">
+                <h1>Member of Student Organization Club
+                    <b><span class="blue-text"> “WE”</span> </b> in SDU university </h1>
+            </div>
+            <div class="project">
+                <h1>News App which
+                    works with NY Times
+                    API . It’s my personal
+                    small app to showcase
+                    my skills</h1>
+            </div>
+        </div>
+
+    </div>
+
+</section>
 </body>
 </html>
