family.html page finished

--- a/pages/family.html
+++ b/pages/family.html
@@ -50,6 +50,43 @@
                     <h2>SDU university student <br> 19 Years Old</h2>
                 </div>
             </div>
+            <div class="family-member">
+                <div class="family-member-avatar">
+                    <img src="/assets/family-muha-avatar.png" alt="">
+                </div>
+                <div class="family-members-info">
+                    <h1>Yessentay Muhammedjan</h1>
+                    <h2>brother<br>Electrician Engineer <br> 21 Years Old</h2>
+                </div>
+            </div>
+            <div class="family-member">
+                <div class="family-member-avatar">
+                    <img src="/assets/family-alma-avatar.png" alt="">
+                </div>
+                <div class="family-members-info">
+                    <h1>Sadykova Alma</h1>
+                    <h2>mother<br>Primary School Teacher <br> 48 Years Old</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section  class="family-gallery">
+    <div class="family-gallery__header">
+        <h1>Family Gallery</h1>
+    </div>
+    <div class="family-gallery__body">
+        <div class="family-gallery__picture">
+            <img src="/assets/family-img-1.png" alt="">
+        </div>
+        <div class="family-gallery__picture">
+            <img src="/assets/family-img-2.png" alt="">
+        </div>
+        <div class="family-gallery__picture">
+            <img src="/assets/family-img-3.png" alt="">
+        </div>
+        <div class="family-gallery__picture">
+            <img src="/assets/family-img-4.png" alt="">
         </div>
     </div>
 </section>
