education.html page finished

--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -34,5 +34,39 @@
         </div>
     </div>
 </header>
+<section class="hobby-info">
+    <div class="container">
+        <div class="hobby-info__header">
+            <h1>My hobbies</h1>
+        </div>
+        <div class="hobby-info__body">
+            <p>I have a lot of hobbies some of them basketball and hiking</p>
+        </div>
+    </div>
+</section>
+<section class="basketball">
+    <div class="container">
+        <div class="basketball__header">
+            <h1>Basketball</h1>
+        </div>
+        <div class="basketball__body">
+            <img src="/assets/basket-1.png" alt="">
+            <img src="/assets/basket-2.png" alt="">
+            <img src="/assets/basket-4.JPG" alt="">
+        </div>
+    </div>
+</section>
+<section class="hiking">
+    <div class="container">
+        <div class="hiking__header">
+            <h1>Hiking</h1>
+        </div>
+        <div class="hiking__body">
+            <img src="/assets/hiking-1.png" alt="">
+            <img src="/assets/hiking-3.png" alt="">
+            <img src="/assets/hiking-2.png" alt="">
+        </div>
+    </div>
+</section>
 </body>
 </html>
