--- a/pages/education.html
+++ b/pages/education.html
@@ -34,5 +34,80 @@
         </div>
     </div>
 </header>
+<section class="timelines">
+    <div class="container">
+        <ul>
+            <li>
+                <div class="year-2021-2023">
+                    <div class="year-2021-2023__header">
+                        <h1>2021-2023</h1>
+                    </div>
+                    <div class="year-2021-2023__body">
+                        <div class="year-2021-2023-info">
+                            <h1>125 ENT School</h1>
+                            <h2>School GPA: 4.88 (from 5)<br>UNT exam score: 131 (from 140, math 45/45)</h2>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="year-2023-2027">
+                    <div class="year-2021-2027__header">
+                        <h1>2023-2027</h1>
+                    </div>
+                    <div class="year-2021-2023__body">
+                        <div class="year-2021-2023-info">
+                            <h1>SDU University</h1>
+                            <h2>GPA: 3.62 (from 4)</h2>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
+<section class="grades">
+    <div class="container">
+        <div class="grades__header">
+            <h1>University Grades</h1>
+        </div>
+        <div class="grades__body">
+            <table>
+                <tr>
+                    <th>Subject</th>
+                    <th>Grade(%)</th>
+                    <th>Grade(Letter)</th>
+                </tr>
+                <tr>
+                    <td>Calculus 1</td>
+                    <td>100%</td>
+                    <td>A</td>
+                </tr>
+                <tr>
+                    <td>Programming Technologies 1</td>
+                    <td>96%</td>
+                    <td>A</td>
+                </tr>
+                <tr>
+                    <td>Programming Technologies 2</td>
+                    <td>100%</td>
+                    <td>A</td>
+                </tr>
+                <tr>
+                    <td>Discrete Math</td>
+                    <td>91%</td>
+                    <td>A-</td>
+                </tr>
+                <tr>
+                    <td>Linear Algebra</td>
+                    <td>91%</td>
+                    <td>A-</td>
+                </tr>
+            </table>
+        </div>
+
+    </div>
+    </div>
+</section>
 </body>
 </html>
