desktop version done

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,5 +34,50 @@
         </div>
     </div>
 </header>
+<section class="contacts">
+    <div class="container">
+        <div class="contacts__body">
+            <div class="contact__info">
+                <ul>
+                    <li>
+                        <div><a href="">
+                            <div class="icon"><img src="/assets/Phone%20call.png" alt=""></div>
+                            <h1>8 (700) 775 52 42</h1>
+                        </a></div>
+                    </li>
+                    <li>
+                        <div><a href="">
+                            <div class="icon"><img src="/assets/Linkedin.png" alt=""></div>
+                            <h1>Linkedin</h1>
+                        </a></div>
+                    </li>
+                    <li>
+                        <div><a href="">
+                            <div class="icon"><img src="/assets/Instagram.png" alt=""></div>
+                            <h1>@bakberdi.yessentay</h1>
+                        </a></div>
+                    </li>
+                    <li>
+                        <div><a href="">
+                            <div class="icon"><img src="/assets/Github.png" alt=""></div>
+                            <h1>GitHub</h1>
+                        </a></div>
+                    </li>
+                    <li>
+                        <div><a href="">
+                            <div class="icon"><img src="/assets/location_on.png" alt=""></div>
+                            <h1>Almaty, Kazakhstan</h1>
+                        </a></div>
+                    </li>
+                </ul>
+            </div>
+            <div class="map-div">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93058.66759730797!2d76.59450575065904!3d43.20774082873068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38834f7675d8a6c3%3A0x7b7d14aec270c056!2sSDU%20University!5e0!3m2!1sru!2skz!4v1728064423104!5m2!1sru!2skz"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
