adaptive css done

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,19 +46,19 @@
                         </a></div>
                     </li>
                     <li>
-                        <div><a href="">
+                        <div><a target="_blank" href="https://www.linkedin.com/in/bakberdi-esentai-241baa298/">
                             <div class="icon"><img src="/assets/Linkedin.png" alt=""></div>
                             <h1>Linkedin</h1>
                         </a></div>
                     </li>
                     <li>
-                        <div><a href="">
+                        <div><a target="_blank"  href="https://www.instagram.com/bakberdi.yessentay/profilecard/?igsh=MXdzeXlka2lmMGM0YQ==">
                             <div class="icon"><img src="/assets/Instagram.png" alt=""></div>
                             <h1>@bakberdi.yessentay</h1>
                         </a></div>
                     </li>
                     <li>
-                        <div><a href="">
+                        <div><a target="_blank" href="https://github.com/bakberdy">
                             <div class="icon"><img src="/assets/Github.png" alt=""></div>
                             <h1>GitHub</h1>
                         </a></div>
