--- a/pages/family.html
+++ b/pages/family.html
@@ -31,10 +31,12 @@
                     </ul>
                 </nav>
             </div>
+            <div class="hamburger">
+                <a href="nav_screen.html"><img src="/assets/hamburger-2-svgrepo-com.svg" alt=""></a>
+            </div>
         </div>
     </div>
 </header>
-
 <section class="family-members">
     <div class="container">
         <div class="family-members__header">
