--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hobbies</title>
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="stylesheet" href="/styles/hobbies.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,6 +31,9 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
+            </div>
+            <div class="hamburger">
+                <a href="nav_screen.html"><img src="/assets/hamburger-2-svgrepo-com.svg" alt=""></a>
             </div>
         </div>
     </div>
