--- a/pages/education.html
+++ b/pages/education.html
@@ -31,6 +31,9 @@
                     </ul>
                 </nav>
             </div>
+            <div class="hamburger">
+                <a href="nav_screen.html"><img src="/assets/hamburger-2-svgrepo-com.svg" alt=""></a>
+            </div>
         </div>
     </div>
 </header>
