--- a/pages/home.html
+++ b/pages/home.html
@@ -5,6 +5,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="/styles/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&display=swap" rel="stylesheet">
 
@@ -31,6 +32,9 @@
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
+                </div>
+                <div class="hamburger">
+                    <a href="nav_screen.html"><img src="/assets/hamburger-2-svgrepo-com.svg" alt=""></a>
                 </div>
             </div>
         </div>
